# Restful_Booker_Meteoro

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml  requirements.txt
schemas/: booking.py
tests/: test_booking.py
util/: allure_attach.py
